--- a/comptools project.ipynb
+++ b/comptools project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "ae5187e6",
    "metadata": {},
    "outputs": [
@@ -20,9 +20,8 @@
     "import hdf5_getters as hdf5\n",
     "\n",
     "\n",
-    "\n",
-    "h5 = hdf5_getters.open_h5_file_read('MillionSongSubset/A/A/A/TRAAAAW128F429D538.h5')\n",
-    "duration = hdf5_getters.get_duration(h5)\n",
+    "h5 = hdf5.open_h5_file_read('MillionSongSubset/A/A/A/TRAAAAW128F429D538.h5')\n",
+    "duration = hdf5.get_duration(h5)\n",
     "h5.close()\n",
     "\n",
     "\n",
@@ -31,23 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "913400f0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'PosixPath' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mlen\u001b[39m(song_list)\n\u001b[1;32m     11\u001b[0m song1 \u001b[38;5;241m=\u001b[39m hdf5\u001b[38;5;241m.\u001b[39mopen_h5_file_read(song_list[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msong1\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/tables/file.py:2797\u001b[0m, in \u001b[0;36mFile.__str__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2794\u001b[0m         \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[1;32m   2795\u001b[0m             \u001b[38;5;66;03m# in-memory file\u001b[39;00m\n\u001b[1;32m   2796\u001b[0m             date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 2797\u001b[0m         astring \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfilename\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m (File) \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mrepr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtitle) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   2798\u001b[0m \u001b[38;5;66;03m#         astring += 'root_uep :=' + repr(self.root_uep) + '; '\u001b[39;00m\n\u001b[1;32m   2799\u001b[0m \u001b[38;5;66;03m#         astring += 'format_version := ' + self.format_version + '\\n'\u001b[39;00m\n\u001b[1;32m   2800\u001b[0m \u001b[38;5;66;03m#         astring += 'filters :=' + repr(self.filters) + '\\n'\u001b[39;00m\n\u001b[1;32m   2801\u001b[0m         astring \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLast modif.: \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mrepr\u001b[39m(date) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'PosixPath' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "from pathlib import Path\n",
@@ -61,13 +47,95 @@
     "\n",
     "song1 = hdf5.open_h5_file_read(song_list[0])\n",
     "\n",
-    "print(song1)\n"
+    "#print(song1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7b811b",
+   "id": "451021e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e99fb972",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ae1dca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8152e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "22178606",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7ecc92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d8edd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7fbec8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b3d048a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb712a40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f3f9dd2",
    "metadata": {},
    "outputs": [],
    "source": []
