data load not industrial

--- a/comptools project.ipynb
+++ b/comptools project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "ae5187e6",
    "metadata": {},
    "outputs": [
@@ -30,13 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "913400f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Stone a Pig'\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "from pathlib import Path\n",
+    "import tables\n",
     "\n",
     "song_list = []\n",
     "\n",
@@ -46,35 +55,32 @@
     "len(song_list)\n",
     "\n",
     "song1 = hdf5.open_h5_file_read(song_list[0])\n",
-    "\n",
-    "#print(song1)"
+    "title = hdf5.get_title(song1)\n",
+    "print(title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "451021e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "e99fb972",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6ae1dca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tables.file.File'>\n",
+      "<closed File>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(song1))\n",
+    "#print(song_list)\n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "code",
