--- a/Angeliki_Experiments.ipynb
+++ b/Angeliki_Experiments.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ed4309e",
    "metadata": {},
    "source": [
     " Source: http://millionsongdataset.com/sites/default/files/tutorial1.py.txt"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1271ae9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b22ef7ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a61281aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "513434eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "900e49fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f1a01408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0ee2c2d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db4e7adb",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54a308d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f99563f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "08d6a729",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ce8a4a9b",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +214,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a5d9cde8",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0316d512",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +266,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a068f24a",
    "metadata": {},
    "source": [
     "# Trying to produce User profiles from the train_triplets.txt\n",
@@ -297,7 +281,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f72604ba",
    "metadata": {},
    "source": [
     "Read in the data:"
@@ -306,7 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fa6a96c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "074d4265",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +426,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a9cdd8",
    "metadata": {},
    "source": [
     "Pivot to tranform the data from long to wide:"
@@ -454,7 +434,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "27d8752e",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1193,7 +1172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
