--- a/reading the data.ipynb
+++ b/reading the data.ipynb
@@ -313,10 +313,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>songID</th>\n",
+       "      <th>play_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>b80344d063b5ccb3212f76538f3d9e43d87dca9e</td>\n",
+       "      <td>SOAKIMP12A8C130995</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>b80344d063b5ccb3212f76538f3d9e43d87dca9e</td>\n",
+       "      <td>SOAPDEY12A81C210A9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>b80344d063b5ccb3212f76538f3d9e43d87dca9e</td>\n",
+       "      <td>SOBBMDR12A8C13253B</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>b80344d063b5ccb3212f76538f3d9e43d87dca9e</td>\n",
+       "      <td>SOBFNSP12AF72A0E22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>b80344d063b5ccb3212f76538f3d9e43d87dca9e</td>\n",
+       "      <td>SOBFOVM12A58A7D494</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>995</td>\n",
+       "      <td>5a905f000fc1ff3df7ca807d57edb608863db05d</td>\n",
+       "      <td>SOYPJMP12AF72A901D</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>996</td>\n",
+       "      <td>5a905f000fc1ff3df7ca807d57edb608863db05d</td>\n",
+       "      <td>SOYRHNG12A8C14002E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>997</td>\n",
+       "      <td>5a905f000fc1ff3df7ca807d57edb608863db05d</td>\n",
+       "      <td>SOYVSHP12A6702016E</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>998</td>\n",
+       "      <td>5a905f000fc1ff3df7ca807d57edb608863db05d</td>\n",
+       "      <td>SOYYYFE12A81C2395E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>999</td>\n",
+       "      <td>5a905f000fc1ff3df7ca807d57edb608863db05d</td>\n",
+       "      <td>SOZBZFF12A6310F12D</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       userID              songID  play_count\n",
+       "0    b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOAKIMP12A8C130995           1\n",
+       "1    b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOAPDEY12A81C210A9           1\n",
+       "2    b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOBBMDR12A8C13253B           2\n",
+       "3    b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOBFNSP12AF72A0E22           1\n",
+       "4    b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOBFOVM12A58A7D494           1\n",
+       "..                                        ...                 ...         ...\n",
+       "995  5a905f000fc1ff3df7ca807d57edb608863db05d  SOYPJMP12AF72A901D           1\n",
+       "996  5a905f000fc1ff3df7ca807d57edb608863db05d  SOYRHNG12A8C14002E           1\n",
+       "997  5a905f000fc1ff3df7ca807d57edb608863db05d  SOYVSHP12A6702016E           2\n",
+       "998  5a905f000fc1ff3df7ca807d57edb608863db05d  SOYYYFE12A81C2395E           1\n",
+       "999  5a905f000fc1ff3df7ca807d57edb608863db05d  SOZBZFF12A6310F12D           2\n",
+       "\n",
+       "[1000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#triples\n",
+    "\n",
+    "user_profiles = pd.read_csv('triplets_1000.txt', sep='\\t', names = ['userID','songID', 'play_count'])\n",
+    "user_profiles"
+   ]
   },
   {
    "cell_type": "code",
