--- a/Angeliki_Experiments.ipynb
+++ b/Angeliki_Experiments.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7fa96846",
    "metadata": {},
    "source": [
     " Source: http://millionsongdataset.com/sites/default/files/tutorial1.py.txt"
@@ -9,7 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "76ed7cd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "3cf591c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "044307b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ca12c157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ac7caca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "40ae692c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "02cead1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "a04908dc",
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "69727de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "8e5b4689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d8cb6d11",
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "25b1b556",
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "7e436490",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "8f82d112",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1217,7 +1232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
