--- a/Angeliki_Experiments.ipynb
+++ b/Angeliki_Experiments.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b3544252",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "03423d0a",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "37d66cf8",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "9c659d0d",
    "metadata": {},
    "outputs": [
@@ -1195,13 +1195,24 @@
        "[13 rows x 951 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "user_profiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "84fd8cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save it as a csv ()\n",
+    "#user_profiles.to_csv(path_or_buf= 'data/user_profile_from_1000_triplets.csv')"
    ]
   },
   {
