--- a/Angeliki_Experiments.ipynb
+++ b/Angeliki_Experiments.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b3544252",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "03423d0a",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "8635cf01",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8eb9d7cb",
    "metadata": {},
    "outputs": [],
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "21ec5dcd",
    "metadata": {},
    "outputs": [],
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "3d5fed17",
    "metadata": {},
    "outputs": [
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "130ee383",
    "metadata": {},
    "outputs": [
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2018186c",
+   "id": "32d79bd6",
    "metadata": {},
    "source": [
     "## Predict play count for a user-song combination based on user-user"
@@ -2268,8 +2268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "4977b341",
+   "execution_count": 7,
+   "id": "8bbf80dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2295,7 @@
     "            w_similarity = play_count_dif*similarity[i]\n",
     "            weighted_sum += w_similarity\n",
     "            \n",
-    "    prediction = int(round(mean_play_count + (weighted_sum/sum_of_similarity)))\n",
+    "    prediction = mean_play_count + (weighted_sum/sum_of_similarity)\n",
     "    print('Predicted rating for user {} -> song {}: {}'.format(userID, songID, prediction))\n",
     "\n",
     "    return prediction"
@@ -2303,8 +2303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "aa77e0fb",
+   "execution_count": 8,
+   "id": "c2605eea",
    "metadata": {},
    "outputs": [
     {
@@ -2317,16 +2317,16 @@
       "2: User cbf471272db7a183cf596a4cb79aa27e7d72dda1, with similarity of 0.18669122855068843\n",
       "3: User bd4c6e843f00bd476847fb75c47b4fb430a06856, with similarity of 0.13388321848534124\n",
       "4: User b98490b4e714cbdf98f4e819c150fc6eff83cb28, with similarity of 0.12962980922945277\n",
-      "Predicted rating for user 5a905f000fc1ff3df7ca807d57edb608863db05d -> song SOZZYAO12A6701FF36: 0\n"
+      "Predicted rating for user 5a905f000fc1ff3df7ca807d57edb608863db05d -> song SOZZYAO12A6701FF36: 0.046185464411638434\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.046185464411638434"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ca5f4b9f",
+   "id": "34baec4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2349,7 +2349,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d975c633",
+   "id": "88634627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2359,7 +2359,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3e83a705",
+   "id": "a354dafa",
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "36a44bc8",
+   "id": "991e39d6",
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2409,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4052c878",
+   "id": "a207dbc9",
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "eb6ff9ec",
+   "id": "d119329c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "0a44c306",
+   "id": "5de676f4",
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2462,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ea333553",
+   "id": "31097841",
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2483,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "7875a23c",
+   "id": "5a2e5cec",
    "metadata": {},
    "outputs": [
     {
@@ -3120,7 +3120,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "24b14b54",
+   "id": "b1face31",
    "metadata": {},
    "outputs": [
     {
