Update LSH in collaborative filtering.ipynb

--- a/LSH in collaborative filtering.ipynb
+++ b/LSH in collaborative filtering.ipynb
@@ -1540,7 +1540,7 @@
     }
    ],
    "source": [
-    "cols"
+    "#cols"
    ]
   },
   {
@@ -3595,7 +3595,7 @@
     }
    ],
    "source": [
-    "vectors_list"
+    "#vectors_list"
    ]
   },
   {
