--- a/Alejandra-notebook-contentbased.ipynb
+++ b/Alejandra-notebook-contentbased.ipynb
@@ -478,7 +478,9 @@
    "cell_type": "code",
    "execution_count": 209,
    "id": "6b502865",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
