--- a/Final notebook.ipynb
+++ b/Final notebook.ipynb
@@ -9193,12 +9193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2dc5fb27",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/MillionSongSubset.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#df = pd.DataFrame(data, columns=['artist_id', 'artist_name', 'artist_location', 'song_id', 'song_name', 'song_hottness','time_signature','artist_terms','artist_mbtags','mode','year','latitude','longitude'])\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/MillionSongSubset.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     df \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m      4\u001b[0m df\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/MillionSongSubset.pkl'"
+     ]
+    }
+   ],
    "source": [
     "#df = pd.DataFrame(data, columns=['artist_id', 'artist_name', 'artist_location', 'song_id', 'song_name', 'song_hottness','time_signature','artist_terms','artist_mbtags','mode','year','latitude','longitude'])\n",
     "with open('data/MillionSongSubset.pkl', 'rb') as f:\n",
@@ -9382,330 +9394,6 @@
     "baskets = df1['artist_terms'].tolist()\n",
     "items = set(list(np.concatenate(baskets).flat))\n",
     "len(items)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "245c0091",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hashcode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>uptownsoul</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>qawwali</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rocknacional</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chanson</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>emo</th>\n",
-       "      <td>2289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dark</th>\n",
-       "      <td>2290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>breakstep</th>\n",
-       "      <td>2291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>twistedhouse</th>\n",
-       "      <td>2292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>vocalmale</th>\n",
-       "      <td>2293</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2294 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              hashcode\n",
-       "                     0\n",
-       "uptownsoul           1\n",
-       "qawwali              2\n",
-       "rocknacional         3\n",
-       "chanson              4\n",
-       "...                ...\n",
-       "emo               2289\n",
-       "dark              2290\n",
-       "breakstep         2291\n",
-       "twistedhouse      2292\n",
-       "vocalmale         2293\n",
-       "\n",
-       "[2294 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### hash all singletons\n",
-    "df_item_hash = pd.DataFrame(range(len(items)), index = list(items), columns =['hashcode'], dtype=int)\n",
-    "df_item_hash"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "fbbd502d",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "269\n"
-     ]
-    }
-   ],
-   "source": [
-    "### count the items, store the count into the hashed array index\n",
-    "item_count_arr = np.zeros((len(baskets),1))\n",
-    "\n",
-    "for b in baskets:\n",
-    "    for item in b:\n",
-    "            idx = df_item_hash.loc[item,'hashcode']\n",
-    "            item_count_arr[idx] += 1\n",
-    "            \n",
-    "### find frequent items with support > s1 (here s1 = 0.02), and hash back from array index to items           \n",
-    "freq_items = [df_item_hash[df_item_hash['hashcode']==x].index[0] for x in np.where(item_count_arr > 0.02*len(baskets))[0]] \n",
-    "print(len(freq_items))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "61f87e40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hashcode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>chanson</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pop</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freejazz</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hardtrance</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>folkrock</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>progressivehouse</th>\n",
-       "      <td>265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>contemporary</th>\n",
-       "      <td>266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>soul</th>\n",
-       "      <td>267</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>emo</th>\n",
-       "      <td>268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dark</th>\n",
-       "      <td>269</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>269 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  hashcode\n",
-       "chanson                  1\n",
-       "pop                      2\n",
-       "freejazz                 3\n",
-       "hardtrance               4\n",
-       "folkrock                 5\n",
-       "...                    ...\n",
-       "progressivehouse       265\n",
-       "contemporary           266\n",
-       "soul                   267\n",
-       "emo                    268\n",
-       "dark                   269\n",
-       "\n",
-       "[269 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_freq_item_hash = pd.DataFrame(range(1,len(freq_items)+1), index=freq_items, columns=['hashcode'])\n",
-    "df_freq_item_hash"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "2db22b96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pair_mat_hashed = np.zeros((len(freq_items)+1,len(freq_items)+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7669eb24",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0.,   0.,   0., ...,   0.,   0.,   0.],\n",
-       "       [  0.,   0.,   0., ...,   0.,   0.,   0.],\n",
-       "       [  0., 152.,   0., ...,   0.,   0.,   0.],\n",
-       "       ...,\n",
-       "       [  0.,  84., 656., ...,   0.,   0.,   0.],\n",
-       "       [  0.,   5., 292., ...,  69.,   0.,   0.],\n",
-       "       [  0.,   3.,  93., ...,  39.,  18.,   0.]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for b in baskets:\n",
-    "    cand_list = [item for item in b if item in freq_items]\n",
-    "    if len(cand_list)<2:\n",
-    "        continue\n",
-    "    for idx, item1 in enumerate(cand_list):\n",
-    "        for item2 in cand_list[idx+1:]:\n",
-    "            i = df_freq_item_hash.loc[item1,'hashcode'] \n",
-    "            j = df_freq_item_hash.loc[item2,'hashcode'] \n",
-    "            pair_mat_hashed[max(i,j),min(i,j)]+=1\n",
-    "\n",
-    "# pair_mat\n",
-    "pair_mat_hashed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c6c67de3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['pop', 'chanson'],\n",
-       " ['folkrock', 'chanson'],\n",
-       " ['folkrock', 'pop'],\n",
-       " ['dancehall', 'pop'],\n",
-       " ['urban', 'pop'],\n",
-       " ['unitedstates', 'pop'],\n",
-       " ['unitedstates', 'folkrock'],\n",
-       " ['unitedstates', 'urban'],\n",
-       " ['songwriter', 'pop'],\n",
-       " ['latinpop', 'pop']]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "freq_pairs = [[df_freq_item_hash[df_freq_item_hash['hashcode']==x].index[0], df_freq_item_hash[df_freq_item_hash['hashcode']==y].index[0]] for x, y in zip(*np.where(pair_mat_hashed > 0.02*len(baskets)))]\n",
-    "freq_pairs[0:10]"
    ]
   },
   {
