add lsh to table (whoops i forgot)

--- a/Final notebook.ipynb
+++ b/Final notebook.ipynb
@@ -4648,6 +4648,7 @@
     "                        'Clustering':        [intra_similar_cluster, average_similar_cluster],\n",
     "                        'Collaborative':     [intra_similar_collab, average_similar_collab],\n",
     "                        'Collaborative KNN': [intra_similar_collab_knn, average_similar_collab_knn],\n",
+    "                        'Collaborative_LSH': [intra_list_similar_LSH, average_similar_LSH],\n",
     "                        'Apriori':           [intra_similar_apriori, average_similar_apriori]})\n",
     "results.index = ['intra list similarity', 'average similarity']\n",
     "results = results.T\n",
