--- a/Final notebook.ipynb
+++ b/Final notebook.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3771cbc9",
+   "id": "96b148fd-c371-4d4b-9f9b-45bc55b14662",
    "metadata": {},
    "source": [
     "## Table of contents\n",
@@ -211,9 +211,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5a998be3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4701,6 +4699,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
+  "toc-showtags": true,
   "vscode": {
    "interpreter": {
     "hash": "c4f92193806e2908606a5f23edd55a5282f2f433b73b1c504507f9256ed9f0b4"
